// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserIcon displays small user image correctly 1`] = `
<Image
  accessibilityIgnoresInvertColors={true}
  source={
    Object {
      "uri": "some_uri",
    }
  }
  style={
    Array [
      Array [
        Object {
          "borderBottomLeftRadius": 9999,
          "borderBottomRightRadius": 9999,
          "borderTopLeftRadius": 9999,
          "borderTopRightRadius": 9999,
        },
        Object {
          "width": 22,
        },
        Object {
          "height": 22,
        },
      ],
    ]
  }
  testID="UserIcon.photo"
/>
`;

exports[`UserIcon displays user image correctly 1`] = `
<Image
  accessibilityIgnoresInvertColors={true}
  source={
    Object {
      "uri": "some_uri",
    }
  }
  style={
    Array [
      Array [
        Object {
          "borderBottomLeftRadius": 9999,
          "borderBottomRightRadius": 9999,
          "borderTopLeftRadius": 9999,
          "borderTopRightRadius": 9999,
        },
        Object {
          "width": 40,
        },
        Object {
          "height": 40,
        },
      ],
    ]
  }
  testID="UserIcon.photo"
/>
`;
